# visualizer

./: .eslintrc.json  craco.config.js  package-lock.json  package.json
back/: package-lock.json  package.json  server.js
src/: App.tsx  index.css
src/components/: Table.tsx  Table2.tsx
wasm/: Cargo.toml
wasm/src/: lib.rs  main.back
